--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                     2. Klik "Upload" dan pilih gambar dari perangkat Anda (maksimal 10 MB).<br>
                     3. Setelah selesai, salin "Direct Link" (biasanya berakhiran .jpg atau .png).<br>
                     4. Tempelkan tautan tersebut di kolom ini.</p>
-                    <button type="submit">Tambah Berita</button>
+                    <button type="submit">Kirim Berita</button>
                 </form>
             </div>
             <div class="news-list" id="admin-news-list">
