--- a/index.html
+++ b/index.html
@@ -608,17 +608,17 @@
             <h2>LAYANAN BERITA</h2>
             <div class="grid">
                 <div class="card">
-                    <img src="https://via.placeholder.com/60" alt="Icon">
+                    <img src="https://via.placeholder.com/60" alt="Berita Menarik">
                     <h3>BERITA MENARIK</h3>
                     <p>Akses berita menarik dengan cepat dan mudah.</p>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/60" alt="Icon">
+                    <img src="https://thumbs2.imgbox.com/10/77/4mWM2l3c_t.png" alt="Live Update">
                     <h3>LIVE UPDATE</h3>
                     <p>Dapatkan pembaruan berita langsung dengan proses yang efisien.</p>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/60" alt="Icon">
+                    <img src="https://via.placeholder.com/60" alt="Arsip Berita">
                     <h3>ARSIP BERITA</h3>
                     <p>Akses arsip berita melalui platform digital kami.</p>
                 </div>
