--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                     <p>Akses berita menarik dengan cepat dan mudah.</p>
                 </div>
                 <div class="card">
-                    <img src="https://thumbs2.imgbox.com/10/77/4mWM2l3c_t.png" alt="Live Update">
+                    <img src="Live Camera Icon.png" alt="Live Update">
                     <h3>LIVE UPDATE</h3>
                     <p>Dapatkan pembaruan berita langsung dengan proses yang efisien.</p>
                 </div>
