--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                     <p>Dapatkan pembaruan berita langsung dengan proses yang efisien.</p>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/60" alt="Arsip Berita">
+                    <img src="Arsip Berita.png" alt="Arsip Berita">
                     <h3>ARSIP BERITA</h3>
                     <p>Akses arsip berita melalui platform digital kami.</p>
                 </div>
