--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
             <h2>LAYANAN BERITA</h2>
             <div class="grid">
                 <div class="card">
-                    <img src="https://via.placeholder.com/60" alt="Berita Menarik">
+                    <img src="Newspaper Icon.png" alt="Berita Menarik">
                     <h3>BERITA MENARIK</h3>
                     <p>Akses berita menarik dengan cepat dan mudah.</p>
                 </div>
