--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
             <div class="footer-section">
                 <h4>Alamat</h4>
                 <ul>
-                    <li>Lorem Ipsum Dolor Sit Amet</li>
+                    <li>Saat ini alamat belum tersedia untuk Fullstate Network dan akan segera kami tambahkan apabila telah mendapat gedung di kota.</li>
                 </ul>
             </div>
         </div>
