--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
             <p>Fullstate Network adalah penyiar berita terkemuka di Fullstate, berkomitmen untuk menyampaikan informasi yang akurat dan terpercaya. Kami telah melayani masyarakat sejak 2022, dengan tim jurnalis berpengalaman yang berdedikasi untuk mengungkap kebenaran.</p>
             <div class="profile-highlight">
                 <div class="news-item">
-                    <img src="https://via.placeholder.com/60" alt="Direktur">
+                    <img src="Dir.png" alt="Direktur">
                     <div class="info">
                         <span class="category">Direktur</span>
                         <span class="date"></span>
@@ -640,7 +640,7 @@
                     </div>
                 </div>
                 <div class="news-item">
-                    <img src="https://via.placeholder.com/60" alt="Wakil Direktur">
+                    <img src="Wadir.png" alt="Wakil Direktur">
                     <div class="info">
                         <span class="category">Wakil Direktur</span>
                         <span class="date"></span>
@@ -649,7 +649,7 @@
                     </div>
                 </div>
                 <div class="news-item">
-                    <img src="https://via.placeholder.com/60" alt="Kepala Direksi">
+                    <img src="Kadir.png" alt="Kepala Direksi">
                     <div class="info">
                         <span class="category">Kepala Direksi</span>
                         <span class="date"></span>
@@ -658,7 +658,7 @@
                     </div>
                 </div>
                 <div class="news-item">
-                    <img src="https://via.placeholder.com/60" alt="Wakil Kepala Direksi">
+                    <img src="Wakadir.png" alt="Wakil Kepala Direksi">
                     <div class="info">
                         <span class="category">Wakil Kepala Direksi</span>
                         <span class="date"></span>
