--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             min-height: 100vh;
         }
         .header {
-            background: linear-gradient(90deg, #1e3a8a, #3b82f6);
+            background: #000000;
             color: white;
             padding: 1rem 2rem;
             display: flex;
