--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             text-decoration: underline;
         }
         .footer {
-            background: #1e3a8a;
+            background: #000000;
             color: white;
             padding: 2rem;
             text-align: left;
