--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@
             margin: 2rem auto 0 auto;
         }
         .profile .profile-highlight .news-item {
-            cursor: default; /* Menghapus kursor pointer */
-            pointer-events: none; /* Menonaktifkan klik */
+            cursor: default;
+            pointer-events: none;
         }
         #login-modal {
             display: none;
@@ -580,7 +580,81 @@
             margin-top: 1rem;
             font-size: 0.9rem;
         }
+        .gallery {
+            margin-bottom: 2rem;
+        }
+        .gallery .grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 1rem; /* Jarak antar kartu */
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .gallery .card {
+            background: white;
+            border-radius: 10px;
+            padding: 1rem;
+            text-align: center;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+        .gallery .card:hover {
+            transform: translateY(-5px);
+        }
+        .gallery .card img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+        .gallery .card p {
+            font-size: 0.9rem;
+            color: #666;
+            margin-top: 0.5rem;
+        }
     </style>
+    <!-- Tambahkan script untuk XLSX -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+            return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+            if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+                try {
+                    var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                    var firstSheetName = workbook.SheetNames[0];
+                    var worksheet = workbook.Sheets[firstSheetName];
+
+                    // Convert sheet to JSON to filter blank rows
+                    var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                    // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                    var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                    // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                    var headerRowIndex = filteredData.findIndex((row, index) =>
+                        row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                    );
+                    // Fallback
+                    if (headerRowIndex === -1 || headerRowIndex > 25) {
+                        headerRowIndex = 0;
+                    }
+
+                    // Convert filtered JSON back to CSV
+                    var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                    csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                    return csv;
+                } catch (e) {
+                    console.error(e);
+                    return "";
+                }
+            }
+            return gk_fileData[filename] || "";
+        }
+    </script>
 </head>
 <body>
     <div class="header">
@@ -677,6 +751,20 @@
     </div>
     <div id="community" class="content">
         <div class="community">
+            <div class="gallery">
+                <h2>Galeri</h2>
+                <div class="grid">
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+1" alt="Gambar 1"><p>Deskripsi Gambar 1</p></div>
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+2" alt="Gambar 2"><p>Deskripsi Gambar 2</p></div>
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+3" alt="Gambar 3"><p>Deskripsi Gambar 3</p></div>
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+4" alt="Gambar 4"><p>Deskripsi Gambar 4</p></div>
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+5" alt="Gambar 5"><p>Deskripsi Gambar 5</p></div>
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+6" alt="Gambar 6"><p>Deskripsi Gambar 6</p></div>
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+7" alt="Gambar 7"><p>Deskripsi Gambar 7</p></div>
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+8" alt="Gambar 8"><p>Deskripsi Gambar 8</p></div>
+                    <div class="card"><img src="https://via.placeholder.com/300x200?text=Gambar+9" alt="Gambar 9"><p>Deskripsi Gambar 9</p></div>
+                </div>
+            </div>
             <h2>Komunitas Fullstate Network</h2>
             <p>Bergabunglah dengan komunitas kami untuk berbagi cerita, diskusi, dan informasi. Fullstate Network mendukung komunitas yang aktif dan terhubung, tempat Anda bisa berpartisipasi dalam berbagai kegiatan sosial dan jurnalisme warga.</p>
         </div>
