--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FN | Fullstate Network</title>
+    <!-- Tambahkan favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
         * {
             margin: 0;
@@ -586,7 +588,7 @@
         .gallery .grid {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 1rem; /* Jarak antar kartu */
+            gap: 1rem;
             max-width: 1200px;
             margin: 0 auto;
         }
