--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FN | Fullstate Network</title>
     <!-- Tambahkan favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="Fullstate Network.ico">
     <style>
         * {
             margin: 0;
